  example

  o added a new package option 'root.dir' (default NULL) which can be
  used to set the root directory to evaluate code chunks in a
  document; by default, the root directory is the directory of the
  input document, and this option enables users to set other
  directories as the working directory for code chunks (#277) (thanks,
  Ken Williams)

BUG FIXES

  o fixed #286: messages (including warnings and errors) are
  guaranteed to be ended by \n, so even when chunk option comment=NA,
  messages will also be rendered correctly (thanks, Carl Boettiger)

  o fixed #273: when knitting a file under another directory with
  cache turned on (e.g. knit('foo/bar.Rnw')), lazyLoad() is unable to
  load the cache files under a relative path because the working
  directory has been changed to the directory of the input file during
  evaluation

MINOR CHANGES

  o the LaTeX environment 'kframe' was updated so that it can be used
  in other environments such as 'center' or 'tabular' (#283) (thanks,
  @muelleki)

  o the OpenCPU demo is more robust to double quotes in the text
  (#271); see http://public.opencpu.org/userapps/opencpu/knitr/

  o for Sweave output, the results will not be put inside the Schunk
  environment when results='asis'

  o stitch() templates use more sensible figure paths by default: the
  path for figures is 'figure/input-script-name' now, i.e. it will be
  different for different input R scripts to avoid possible clashes

  o stitch() templates no longer use default title and author names;
  if the user did not set them in the R script (as meta comments #
  title: and # author: ), there will not be titles or authors in the
  output
  
			 CHANGES IN knitr VERSION 0.6.3

MAJOR CHANGES

  o this is a urgent patch version for CRAN: the dependencies on
  highlight and parser were removed because these two package were
  orphaned on CRAN; now knitr uses a naive syntax highlighter for